Scrolling issue on mobile, Fixed #9

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 
 html {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 *,
